get register/login buttons and forms working, fix issue with avatar being too large

--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -32,6 +32,13 @@
   background-color: transparent;
 }
 
+.header__avatar {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
 .header__username {
   margin: 0;
   font-size: 20px;
